@@ -2,9 +2,9 @@ package co.kr.allpick.domain.product.dto;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import co.kr.allpick.domain.product.entity.Product;
+import co.kr.allpick.domain.review.dto.ReviewResponseDto;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
@@ -40,6 +40,8 @@ public class ProductDetailResponseDto {
 	private List<ProductOptionResponseDto> optionList;
 	@Schema(description = "상품이미지 리스트")
 	private List<ProductImageResponseDto> productImagesList;				
+	@Schema(description = "상품 리뷰 리스트")
+	private List<ReviewResponseDto> reviewList;
 	
 	@NotNull
 	@PositiveOrZero
@@ -60,7 +62,7 @@ public class ProductDetailResponseDto {
 	@Schema(description = "주의사항", example ="직사광선을 피해 보관하세요", requiredMode = Schema.RequiredMode.REQUIRED)
 	private String precaution;						
 	
-	public static ProductDetailResponseDto from(Product product) {
+	public static ProductDetailResponseDto from(Product product, List<ReviewResponseDto> reviewList) {
 		return ProductDetailResponseDto.builder()
 				.productId(product.getProductId())
 				.parentCategoryName(product.getParentCategory().getCategoryName())
@@ -70,14 +72,15 @@ public class ProductDetailResponseDto {
 				.price(product.getPrice())
 				.description(product.getDescription())
 				.manufacturer(product.getManufacturer())
-				.origin(product.getOrigin())
+				.origin(product.getOrigin()) 
 				.precaution(product.getPrecaution())
 				.optionList(product.getOptionList().stream()
 						.map(ProductOptionResponseDto::from)
-						.collect(Collectors.toList()))
+						.toList())
 				.productImagesList(product.getProductImageList().stream()
 						.map(ProductImageResponseDto::from)
-						.collect(Collectors.toList()))
-				.build();
+						.toList())
+				.reviewList(reviewList)  
+ 				.build(); 
 	}
-}
+} 
